# webscraping-tutorial

./: README.md
first_section/: main.py  pyproject.toml
second_section/: main.py  pyproject.toml
